--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "jinja2>=3.1.2",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
-    "reflex>=0.8.7",
     "ruff>=0.12.9",
+    "streamlit>=1.48.1",
     "xai-sdk>=1.0.1",
 ]
